@@ -1,5 +1,10 @@
 2025-11-17  Oliver Kiddle  <opk@zsh.org>
 
+	* 54074, 54082: Doc/Zsh/zle.yo, Src/prompt.c, Src/Zle/termquery.c,
+	Src/Zle/zle_main.c, Src/Zle/zle_refresh.c, Src/Modules/nearcolor.c,
+	Test/X04zlehighlight.ztst: add an opaque key for use in
+	zle_highlight/region_highlight to allow mixing of colours
+
 	* 54083: Src/Zle/zle_keymap.c: fix for cursor shape in viopp mode
 
 	* 54075: Doc/Zsh/prompt.yo, Src/Modules/watch.c, Src/Zle/complist.c,
